@@ -1,4 +1,4 @@
-include(../../../wikt.pri)
+include(../tools.pri)
 
 TEMPLATE = app
 TARGET = convdict12
@@ -6,7 +6,5 @@ TARGET = convdict12
 SOURCES += format2.cpp main.cpp
 HEADERS += format2.h
 
-LIBS *= -lwikt
-LIBS += -L../../../bin
 INCLUDEPATH += ../..
 DESTDIR = ../../../bin
