@@ -1,9 +1,7 @@
-include(../../../wikt.pri)
+include(../tools.pri)
 
 TEMPLATE = app
 TARGET = dict4src
 SOURCES += main.cpp
-LIBS *= -lwikt
-LIBS += -L../../../bin
 INCLUDEPATH += ../..
 DESTDIR = ../../../bin
