@@ -1,12 +1,7 @@
-include(../../../wikt.pri)
+include(../tools.pri)
 
 TEMPLATE = app
 TARGET = imageresizer
-
 SOURCES += main.cpp
-
-LIBS *= -lwikt
-LIBS += -L../../../bin
-
 INCLUDEPATH += ../..
 DESTDIR = ../../../bin
