@@ -1,10 +1,7 @@
-include(../../../wikt.pri)
+include(../tools.pri)
 
 TEMPLATE = app
 TARGET = mediadownloader
 SOURCES += main.cpp
-
-LIBS *= -lwikt
-LIBS += -L../../../bin
 INCLUDEPATH += ../..
 DESTDIR = ../../../bin
