@@ -1,0 +1,3 @@
+include(../../wikt.pri)
+
+LIBS *= ../../../bin/libwikt.so.0.20
